--- a/style.css
+++ b/style.css
@@ -2,12 +2,57 @@ body {
   font-family: Arial, sans-serif;
   padding: 0;
   margin: 0;
+  max-width: 100%;
 }
 
-#container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.profile-photo {
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+}
+
+.card {
+  width: 90%; /* La card ocupa el 90% del ancho del dispositivo */
+  max-width: 400px; /* Limita el ancho máximo en dispositivos más grandes */
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  padding-bottom: 35em;
+}
+
+.card-img {
+  width: 100%;
+  height: auto;
+}
+
+.card-content {
+  padding: 16px;
+}
+
+.card-title {
+  font-size: 1.5em;
+  margin: 0 0 8px;
+}
+
+.card-text {
+  font-size: 1em;
+  margin: 0 0 16px;
+}
+
+.card-button {
+  display: inline-block;
+  padding: 10px 15px;
+  background-color: #007bff;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.card-button:hover {
+  background-color: #0056b3;
 }
 
 @media (min-width: 768px) {
