--- a/style.css
+++ b/style.css
@@ -19,13 +19,23 @@ body {
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
+  padding: 4rem 2rem;
+  margin: 10px auto;
+  margin-bottom: 3rem;
 }
 
 .card-img {
   width: 100%;
   height: auto;
+  max-width: 100%;
 }
-
+@media (max-width: 600px) {
+  img {
+      width: 80%; /* Cambia el tamaño de la imagen al 80% del contenedor en pantallas pequeñas */
+      height: auto; /* Mantiene la proporción de la imagen */
+      max-width: 300px; /* Limita el ancho máximo de la imagen */
+  }
+}
 .card-content {
   padding: 16px;
 }
@@ -96,4 +106,47 @@ footer {
   background-color: lightgray;
   padding: 20px;
   text-align: center;
+}
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 20px 0;
+  text-align: center;
+  font-size: 14px;
+  width: 100%;
+  position: relative;
+  bottom: 0;
+}
+
+.footer-container {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer-content h3 {
+  margin: 0;
+  font-size: 1.5em;
+  margin-bottom: 10px;
+}
+
+.footer-content p {
+  margin: 5px 0;
+}
+
+.footer-social a {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 10px;
+}
+
+.footer-social a:hover {
+  text-decoration: underline;
+}
+
+.footer-copyright {
+  margin-top: 20px;
 }
