--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
 }
 
 header {
-  background-color: lightgray;
+  background-color: rgba(38, 68, 144, 0.895);
   padding: 20px;
   text-align: center;
 }
@@ -80,6 +80,15 @@ header {
 header h1 {
   margin: 0;
 }
+h1 {
+  font-size: 1.8rem; /* Ajusta el tamaño de la fuente */
+  font-family: 'Roboto', sans-serif; /* Cambia a una fuente más moderna */
+  font-weight: 300; /* Hace que la fuente sea más delgada */
+  line-height: 1.3; /* Mejora el espacio entre líneas */
+  color: #333; /* Ajusta el color del texto */
+  margin-bottom: 20px; /* Añade espacio debajo del h1 */
+}
+
 
 nav ul {
   display: flex;
