--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@ body {
   max-width: 100%;
 }
 
+body, html {
+  overflow-x: hidden;
+  padding: 0;
+  margin: 0;
+}
+
+
 .profile-photo {
   border-radius: 50%;
   width: 150px;
