--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ section {
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  padding: 4rem 2rem;
+  padding: 1rem;
   margin-bottom: 3rem;
   box-sizing: border-box;
 }
