--- a/style.css
+++ b/style.css
@@ -22,6 +22,30 @@ body, html {
   height: 150px;
   object-fit: cover;
 }
+
+header {
+  background-color: rgba(38, 68, 144, 0.895);
+  padding: 20px;
+  text-align: center;
+
+}
+
+.Title-name{
+  font-size: 35px;
+  color: white;
+}
+
+header h1 {
+  margin: 0;
+}
+h1 {
+  font-size: 1.5rem; /* Ajusta el tamaño de la fuente */
+  font-family: 'Roboto', sans-serif; /* Cambia a una fuente más moderna */
+  font-weight: 300; /* Hace que la fuente sea más delgada */
+  line-height: 1.3; /* Mejora el espacio entre líneas */
+  color: #333; /* Ajusta el color del texto */
+  margin-bottom: 20px; /* Añade espacio debajo del h1 */
+}
 section {
   display: flex;
   justify-content: center; /* Centra la card horizontalmente */
@@ -89,24 +113,7 @@ section {
   }
 }
 
-header {
-  background-color: rgba(38, 68, 144, 0.895);
-  padding: 20px;
-  text-align: center;
 
-}
-
-header h1 {
-  margin: 0;
-}
-h1 {
-  font-size: 1.5rem; /* Ajusta el tamaño de la fuente */
-  font-family: 'Roboto', sans-serif; /* Cambia a una fuente más moderna */
-  font-weight: 300; /* Hace que la fuente sea más delgada */
-  line-height: 1.3; /* Mejora el espacio entre líneas */
-  color: #333; /* Ajusta el color del texto */
-  margin-bottom: 20px; /* Añade espacio debajo del h1 */
-}
 
 .buttons {
   min-width: 700px;
