--- a/style.css
+++ b/style.css
@@ -19,28 +19,34 @@ body, html {
   color: white;
 }
 
+header {
+
+  padding: 15px;
+  text-align: center;
+
+
+}
+
+
 
 .profile-photo {
   border-radius: 50%;
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   object-fit: cover;
 }
-
-header {
-
-  padding: 20px;
-  text-align: center;
+.Title-name{
+  font-size: 30px;
+  color: white;
+  margin-bottom: 0;
 
 }
-
-.Title-name{
-  font-size: 40px;
-  color: white;
+.profesion{
+  font-size: 0.8rem;
 }
 
 .buttons {
-  min-width: 700px;
+  min-width: 400px;
   display: inline;
   justify-content: space-around;
 }
@@ -67,61 +73,21 @@ header h1 {
   margin: 0;
   
 }
+
 h1 {
-  font-size: 1.5rem; /* Ajusta el tamaño de la fuente */
+  font-size: 1.3rem; /* Ajusta el tamaño de la fuente */
   font-family: 'Roboto', sans-serif; /* Cambia a una fuente más moderna */
   font-weight: 300; /* Hace que la fuente sea más delgada */
   line-height: 1.3; /* Mejora el espacio entre líneas */
   color: #fff8f8; /* Ajusta el color del texto */
-  margin-bottom: 20px; /* Añade espacio debajo del h1 */
-}
-section {
-  display: flex;
-  justify-content: center; /* Centra la card horizontalmente */
-  align-items: center; /* Centra la card verticalmente */
-  flex-direction: column; /* Asegura que las cards se apilen verticalmente si hay más de una */
-  padding: 0.5rem; /* Opcional: Añade algo de espacio alrededor del contenido */
-}
-
-.card {
-  width: 100%; /* La card ocupa el 90% del ancho del contenedor */
-  max-width: 700px; /* Limita el ancho máximo en dispositivos más grandes */
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  padding: 1rem;
-  margin-bottom: 3rem;
-  box-sizing: border-box;
-}
-
-
-
-.card-img {
-  width: 100%;
-  height: auto;
-  max-width: 100%;
-  border-radius: 0.22rem;
-}
-@media (max-width: 600px) {
-  img {
-      width: 80%; /* Cambia el tamaño de la imagen al 80% del contenedor en pantallas pequeñas */
-      height: auto; /* Mantiene la proporción de la imagen */
-      max-width: 300px; /* Limita el ancho máximo de la imagen */
-  }
-}
-
-
-
-/* .card-button {
-  display: inline-block;
-  padding: 10px 15px;
-  background-color: #007bff;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 4px;
+  margin-bottom: 0px; /* Añade espacio debajo del h1 */
   text-align: center;
-} */
+}
+
+
+
+
+
 
 .card-button:hover {
   background-color: #0056b3;
