--- a/style.css
+++ b/style.css
@@ -34,11 +34,13 @@ header {
   width: 100px;
   height: 100px;
   object-fit: cover;
+  
 }
 .Title-name{
   font-size: 30px;
   color: white;
   margin-bottom: 0;
+  margin-top: 0.5rem;
 
 }
 .profesion{
